--- a/src/index.css
+++ b/src/index.css
@@ -63,10 +63,14 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* opacity: 0.8; */
 }
 
 .icon-button:hover {
   filter: brightness(1.2);
-  /* opacity: 1; */
+}
+
+.icon-button svg {
+  fill: var(--text-color);
+  width: 20px;
+  height: 20px;
 }
