--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@ code {
   --nav-size: 60px;
   --border: 1 px solid #474a4d;
   --speed: 500ms;
+  --border-radius: 5px;
 }
 
 ul {
@@ -39,8 +40,8 @@ a {
   border-bottom: var(--border);
 }
 .navbar-nav {
-  height:100%;
   max-width:100%;
+  height:100%;
   display: flex;
   justify-content: flex-end;
 }
@@ -63,6 +64,7 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: filter 300ms;
 }
 
 .icon-button:hover {
@@ -73,4 +75,79 @@ a {
   fill: var(--text-color);
   width: 20px;
   height: 20px;
+}
+
+.dropdown {
+  position: absolute;
+  top: 58px;
+  width: 300px;
+  transform: translateX(-45%);
+  background-color: var(--bg);
+  border: var(--border);
+  border-radius: var(--border-radius);
+  padding: 1rem;
+  overflow: hidden;
+  transition: height  var(--speed) ease;
+}
+
+.menu {
+  width: 100%;
+}
+
+.menu-item {
+  height: 50px;
+  display: flex;
+  align-items: center;
+  border-radius: var(--border-radius);
+  transition: background var(--speed); 
+  padding: 0.5rem;
+}
+
+.menu-item .icon-button {
+  margin-right: 0.5rem;
+}
+
+
+.menu-item .icon-button:hover {
+  filter: none;
+}
+
+.menu-item:hover {
+  background-color: #525357; 
+}
+
+.icon-right {
+  margin-left: auto;
+}
+
+.menu-primary-enter {
+  position: absolute;
+  transform: translateX(-110%);
+}
+
+.menu-primary-enter-active {  /* Chnaged */
+  transform: translateX(0%);
+  transition: all var(--speed) ease;
+}
+.menu-primary-exit {
+  position: absolute;
+}
+.menu-primary-exit-active {
+  transform: translateX(-110%); /* Chnaged */
+  transition: all var(--speed) ease;
+}
+
+.menu-secondary-enter {
+  transform: translateX(110%);
+}
+.menu-secondary-enter-active { /* Changed */
+  transform: translateX(0%);
+  transition: all var(--speed) ease;
+}
+/* .menu-secondary-exit {
+
+} */
+.menu-secondary-exit-active {
+  transform: translateX(110%);
+  transition: all var(--speed) ease;
 }
